--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,6 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "rootDir": ".",
-    "incremental": true,
-    "paths": {
-      "@app/*": ["./src/*"]
-    }
+    "incremental": true
   }
 }
