docs(readme.md): update of the installation and project execution process

--- a/.env.example
+++ b/.env.example
@@ -25,5 +25,5 @@ JWT_SECRET=xxxxxxxxxx
 JWT_EXPIRES_IN=360000
 # user super admin
 ADMIN_EMAIL=user@celerik.com
-ADMIN_PASSWORD=
+ADMIN_PASSWORD=password
 ADMIN_USERNAME=admin
